<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/TV_LogAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Default_User"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TV_FavoriteGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Default_FavoriteGame"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/B_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RV_Main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
</LinearLayout>